# sushi

./: .SRCINFO  .gitignore  .golangci.yml  .goreleaser.yml  .mega-linter.yml  .yamllint.yml  BACKLOG.md  CDC.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVBOOK.md  PKGBUILD  README.md  SECURITY.md  build.rs  client_test.go  config_test.go  go.mod  go.sum  i18n.toml  instructions.md  release-plz.toml  sushi.sample.yml  susshi.spec
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config_help.md  feature_request.md
.github/workflows/: aur-publish.yml  ci.yml  dependabot-auto-merge.yml  go.yml  release-plz.yml  release.yml  sonarcloud.yml
cmd/sushi/: main.go  main_test.go
docs/: cli.md  configuration.md  hooks.md  import-export.md  scp.md  ssh-advanced.md  troubleshooting.md  tui.md  tunnels.md  wallix.md
examples/: check_mode_inheritance.rs  full_config.yaml  test_search.rs
i18n/en/: susshi.ftl
i18n/fr/: susshi.ftl
src/: app.rs  config.rs  hooks.rs  i18n.rs  import.rs  lib.rs  main.rs  probe.rs  state.rs
src/app/: command.rs  core_state.rs  expansion_state.rs  favorites.rs  lifecycle.rs  overview.rs  scp_state.rs  search.rs  selection.rs  tests_credential_input.rs  tests_helpers.rs  tests_reload.rs  tests_search.rs  tests_state_mutations.rs  tests_tunnel_form.rs  tests_visibility.rs  tests_wallix.rs  tunnel_state.rs  visible_items.rs  wallix_state.rs
src/export/: ansible.rs  csv.rs  mod.rs  nmap.rs  openssh.rs  terraform.rs
src/handlers/: mod.rs
src/ssh/: client.rs  mod.rs  scp.rs  sftp.rs  tunnel.rs
src/ui/: mod.rs  overlays.rs  panels.rs  theme.rs
src/ui/widgets/: mod.rs
src/wallix/: mod.rs
tests/: parse_full_config.rs  scp_args.rs  sftp_transfer.rs  ssh_args.rs  tunnel_handle.rs  wallix_menu.rs
