[package]
name = "susshi"
version = "0.10.2"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arboard = "3"
catppuccin = "2.6.0"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29.0"
libc = "0.2"
ratatui = { version = "0.30.0", features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
shellexpand = "3.1.2"
thiserror = "2.0.18"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["term", "process"] }

[dev-dependencies]
tempfile = "3.26.0"

[profile.release]
# Optimise pour la taille plutôt que la vitesse
# opt-level = "z"
# Supprime les symboles de debug (économie ~1 Mo typiquement)
strip = true
# Link Time Optimization : élimine le code mort inter-crates
lto = true
# Un seul thread de codegen : plus lent à compiler mais binaire plus petit
codegen-units = 1
# Pas de symboles de panic verbeux (remplace "panicked at …" par abort)
panic = "abort"
