[package]
name = "susshi"
version = "0.12.2"
edition = "2024"
description = "A modern terminal-based SSH connection manager with a beautiful Catppuccin TUI"
license = "MIT"
repository = "https://github.com/yatoub/susshi"
homepage = "https://github.com/yatoub/susshi"
documentation = "https://github.com/yatoub/susshi/blob/master/README.md"
keywords = ["ssh", "tui", "terminal", "manager", "ratatui"]
categories = ["command-line-utilities", "network-programming"]
exclude = ["target/", ".idea/", ".github/"]

[dependencies]
anyhow = "1.0.102"
arboard = "3"
catppuccin = "2.7.0"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29.0"
libc = "0.2"
ratatui = { version = "0.30.0", features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
shellexpand = "3.1.2"
ssh2 = "0.9"
thiserror = "2.0.18"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["term", "process"] }

[dev-dependencies]
tempfile = "3.26.0"

[profile.release]
# Optimise pour la taille plutôt que la vitesse
# opt-level = "z"
# Supprime les symboles de debug (économie ~1 Mo typiquement)
strip = true
# Link Time Optimization : élimine le code mort inter-crates
lto = true
# Un seul thread de codegen : plus lent à compiler mais binaire plus petit
codegen-units = 1
# Pas de symboles de panic verbeux (remplace "panicked at …" par abort)
panic = "abort"

[package.metadata.deb]
name = "susshi"
maintainer = "yatoub <yatoub@users.noreply.github.com>"
copyright = "2024-2026 yatoub"
license-file = ["LICENCE", "0"]
extended-description = """\
susshi is a modern, terminal-based SSH connection manager \
with TUI (ratatui + Catppuccin theme), multi-mode connections \
(direct, jump, bastion/Wallix), and YAML configuration."""
depends = "openssh-client"
recommends = "xclip | xdotool"
section = "net"
priority = "optional"
assets = [
    ["target/release/susshi", "usr/bin/susshi", "755"],
]
