[package]
name = "susshi"
version = "0.13.5"
edition = "2024"
description = "A modern terminal-based SSH connection manager with a beautiful Catppuccin TUI"
license = "MIT"
repository = "https://github.com/yatoub/susshi"
homepage = "https://github.com/yatoub/susshi"
documentation = "https://github.com/yatoub/susshi/blob/master/README.md"
keywords = ["ssh", "tui", "terminal", "manager", "ratatui"]
categories = ["command-line-utilities", "network-programming"]
exclude = ["target/", ".idea/", ".github/"]

[dependencies]
anyhow = "1.0.102"
arboard = { version = "3", default-features = false }
catppuccin = "2.7.0"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29.0"
libc = "0.2"
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
shellexpand = "3.1.2"
thiserror = "2.0.18"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["term", "process"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
ssh2 = { version = "0.9", features = ["vendored-openssl"] }

[target.'cfg(target_os = "windows")'.dependencies]
ssh2 = "0.9"

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
# Compromis taille / temps de compilation pour les builds de release.
opt-level = "s"
# Supprime les symboles de debug (économie ~1 Mo typiquement)
strip = true
# Thin LTO garde une bonne réduction de taille avec un coût de build plus faible que fat LTO.
lto = "thin"
# Plus d'unités de codegen accélèrent fortement la compilation release.
codegen-units = 8
# Autorise les builds release incrémentaux en local (plus rapide en itérations).
incremental = true
# Pas d'info debug en release.
debug = 0
# Pas de symboles de panic verbeux (remplace "panicked at …" par abort)
panic = "abort"

[package.metadata.deb]
name = "susshi"
maintainer = "yatoub <yatoub@users.noreply.github.com>"
copyright = "2024-2026 yatoub"
license-file = ["LICENCE", "0"]
extended-description = """\
susshi is a modern, terminal-based SSH connection manager \
with TUI (ratatui + Catppuccin theme), multi-mode connections \
(direct, jump, bastion/Wallix), and YAML configuration."""
depends = "openssh-client"
recommends = "xclip | xdotool"
section = "net"
priority = "optional"
assets = [
    ["target/release/susshi", "usr/bin/susshi", "755"],
]
